Revision history for perl distribution Mojo-Run3

1.03 Not Released
 - Add support for manually closing the PTY slave

1.02 2023-01-18T17:58:48
 - Fix keeping filehandles open until the whole process has ended

1.01 2023-01-17T19:48:15
 - Made the bash output test a bit sloppy

1.00 2023-01-17T19:33:47
 - Changed driver() to support driver per filehandle
 - Add support for seperate stdin and pty
 - Add support for attaching stdout or stderr to pty
 - Add support for writing to both pty and stdin

0.07 2022-10-16T15:39:52
 - Fix failing tests

0.06 2022-09-14T19:41:37
 - Add bytes_waiting()
 - Add support for close("other");

0.05 2022-06-13T18:53:02+0900
 - Will automatically clean up on destroy

0.04 2022-06-13T10:46:18+0900
 - Fix also closing the pty when stdin gets closed

0.03 2022-06-12T11:21:31+0900
 - Need to receive EOF on boh STDERR and STDOUT before emitting "finish"

0.02 2022-06-11T11:17:26+0900
 - Changed "read" event to "stdout", "stderr" and "pty"
 - Add support for MOJO_RUN3_DEBUG=1
 - Add support for IO::Pty
 - Add handle()
 - Add "sshpass" example

0.01 2022-06-10T20:31:39+0900
 - Add close(), kill(), start(), write()
 - Add exit_status(), pid(), status()
 - Add run_p()